# artificially_correct_hackathon

./: .gitignore  README.md  pyproject.toml
notes/: general.md
src/: Gender Bias in GPT-2.ipynb
