[tool.poetry]
name = "artificially_correct_hackathon"
version = "0.1.0"
description = ""
authors = ["Stefan Mesken <stefan.mesken@deepl.com>"]

[tool.poetry.dependencies]
python = "^3.7"
transformers = {extras = ["torch"], version = "^4.11.2"}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
